--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
+    "react-router": "^6.15.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.3",
+    "redux-thunk": "^2.4.2",
+    "sass": "^1.66.1",
+    "scss": "^0.2.4",
+    "styled-components": "^6.0.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
