--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-indiana-drag-scroll": "^2.2.0",
+    "react-modal": "^3.16.1",
     "react-odometerjs": "^3.1.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
