--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-indiana-drag-scroll": "^2.2.0",
     "react-modal": "^3.16.1",
     "react-odometerjs": "^3.1.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
