--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#api
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
