--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,18 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-modal": "^3.16.1",
+    "react-player": "^2.13.0",
     "react-query": "^3.39.3",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
+    "react-youtube": "^10.1.0",
     "sass": "^1.66.1",
     "scss": "^0.2.4",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
