--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.67.0",
     "scss": "^0.2.4",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
